# draco-oxide

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE_MIT  README.md
analyzer/: Cargo.toml  README.md
analyzer/assets/: template.html  viewer.js
analyzer/src/: main.rs
cli/: Cargo.toml
draco-oxide/: Cargo.toml
draco-oxide/examples/: gltf.rs  obj.rs
draco-oxide/macros/draco-nd-vector/: Cargo.toml
draco-oxide/macros/draco-nd-vector/src/: lib.rs
draco-oxide/macros/nd-vector/: Cargo.toml
draco-oxide/macros/nd-vector/src/: lib.rs
draco-oxide/macros/nd_vector/: Cargo.toml
draco-oxide/src/: eval.rs  lib.rs
draco-oxide/src/core/: bit_coder.rs  material.rs  mod.rs  shared.rs  structural_metadata.rs  texture.rs
draco-oxide/src/core/attribute/: mod.rs
draco-oxide/src/core/buffer/: attribute.rs  mod.rs  reader.rs  writer.rs
draco-oxide/src/core/corner_table/: all_inclusive_corner_table.rs  attribute_corner_table.rs  mod.rs
draco-oxide/src/core/mesh/: builder.rs  meh_features.rs  metadata.rs  mod.rs
draco-oxide/src/core/scene/: mod.rs
draco-oxide/src/decode/: mod.rs
draco-oxide/src/decode/attribute/: attribute_decoder.rs
draco-oxide/src/decode/attribute/inverse_prediction_transform/: orthogonal.rs
draco-oxide/src/decode/attribute/portabilization/: dequantization_rect_array.rs  mod.rs
draco-oxide/src/decode/connectivity/: spirale_reversi.rs
draco-oxide/src/decode/entropy/: rans.rs  symbol_coding.rs
draco-oxide/src/encode/: mod.rs
draco-oxide/src/encode/attribute/: attribute_encoder.rs  mod.rs
draco-oxide/src/encode/attribute/portabilization/: mod.rs  octahedral_quantization.rs  quantization_coordinate_wise.rs  to_bits.rs
draco-oxide/src/encode/attribute/prediction_transform/: difference.rs  geom.rs  mod.rs  oct_orthogonal.rs  oct_reflection.rs  orthogonal.rs  wrapped_difference.rs
draco-oxide/src/encode/connectivity/: edgebreaker.rs  mod.rs  sequential.rs
draco-oxide/src/encode/entropy/: rans.rs  symbol_coding.rs
draco-oxide/src/encode/header/: mod.rs
draco-oxide/src/encode/metadata/: mod.rs
draco-oxide/src/io/: mod.rs  texture_io.rs
draco-oxide/src/io/gltf/: decode.rs  encode.rs  mod.rs  scene_io.rs  transcoder.rs
draco-oxide/src/shared/: mod.rs
draco-oxide/src/shared/attribute/: mod.rs  sequence.rs
draco-oxide/src/shared/connectivity/: eq.rs  mod.rs  sequential.rs
draco-oxide/src/shared/entropy/: mod.rs
draco-oxide/src/utils/: bit_coder.rs  mod.rs
draco-oxide/tests/: compatibility.rs
draco-oxide/tests/data/Duck/: README.md
draco-oxide/tests/eval/: mod.rs
draco-rs/: Cargo.toml  build.rs
draco-rs/examples/: default.rs
draco-rs/examples/outputs/: bunny_compressed.draco
draco-rs/macros/eval/: Cargo.toml
draco-rs/macros/eval/src/: lib.rs
draco-rs/macros/nd_vector/src/: lib.rs
draco-rs/src/: eval.rs  lib.rs
draco-rs/src/core/: bit_coder.rs  mod.rs  shared.rs
draco-rs/src/core/attribute/: mod.rs  raw.rs
draco-rs/src/core/buffer/: attribute.rs  mod.rs
draco-rs/src/core/corner_table/: all_inclusive_corner_table.rs  attribute_corner_table.rs  mod.rs
draco-rs/src/core/mesh/: builder.rs  mod.rs
draco-rs/src/decode/: mod.rs
draco-rs/src/decode/attribute/: attribute_decoder.rs  mod.rs
draco-rs/src/decode/connectivity/: mod.rs  sequential.rs  spirale_reversi.rs
draco-rs/src/decode/entropy/: mod.rs  rans.rs  symbol_coding.rs
draco-rs/src/decode/header/: mod.rs
draco-rs/src/decode/metadata/: mod.rs
draco-rs/src/encode/: mod.rs
draco-rs/src/encode/attribute/: attribute_encoder.rs  mod.rs
draco-rs/src/encode/connectivity/: edgebreaker.rs  mod.rs  sequential.rs
draco-rs/src/encode/entropy/: mod.rs  rans.rs  symbol_coding.rs
draco-rs/src/encode/header/: mod.rs
draco-rs/src/encode/metadata/: mod.rs
draco-rs/src/shared/: mod.rs
draco-rs/src/shared/attribute/: mod.rs  post_prediction.rs  sequence.rs
draco-rs/src/shared/connectivity/: eq.rs  mod.rs  sequential.rs
draco-rs/src/shared/entropy/: mod.rs
draco-rs/src/utils/: bit_coder.rs  debug.rs  geom.rs  mod.rs
draco-rs/tests/: compatibility.rs  gltf_integration.rs  integrated_tests.rs  obj_reindexing.rs
draco-rs/tests/eval/: mod.rs
draco-rs/tests/outputs/: sphere_compressed.draco  sphere_eval.json
examples/: default.rs
(+128 files in other folders)
