[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "*"
draco = { path = "../draco-rs", features = ["evaluation"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
tobj = "4.0.3"
regex = "1.11.1"