[package]
description = "draco"
name = "draco"
authors = ["Re:Earth Contributors"]
edition = "2021"
exclude = ["benches/", "test-data/", "testdata/"]
rust-version = "1.84"
version = "0.0.1"

[dependencies]
enum_dispatch = "0.3.13"
nd_vector = { path = "macros/nd_vector" }
lazy_static = "1.5.0"
remain = "*"
seq-macro = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
serde_json = "1.0"
thiserror = "*"
tobj = "4.0.3"
faer = "0.22.6"
gltf = "1.4"

[features]
default = []
evaluation = []
debug_format = []